--- a/app/styles/nav.scss
+++ b/app/styles/nav.scss
@@ -1,68 +1,28 @@
 .nav {
-  background-color: $blue;
-  color: white;
+  display: flex;
+  width: 1000px;
+  margin: 0 auto;
+  padding: 0 50px;
+  align-items: center;
+  font-size: 18px;
+  justify-content: space-between;
 
-  ul {
-    width: 1075px;
-    list-style: none;
-    margin: 0 auto;
-    display: flex;
-    padding: 0 30px;
+  &__item {
+    padding: 22px 0;
+    margin-left: 50px;
+    border-bottom: 1.5px solid white;
 
-    li {
-      margin-left: 70px;
+    &:first-child {
+      margin-right: 0;
+    }
 
-      &:first-child {
-        margin-left: 0;
-      }
+    &--title {
+      font-weight: bold;
+    }
 
-      .title {
-        font-size: 21px;
-        padding: 24px 0;
-      }
-
-      svg,
-      path {
-        display: inline-block;
-        fill: white;
-        padding: 24px 0;
-      }
-
-      a,
-      span {
-        display: inline-block;
-        padding: 26px 0;
-        font-weight: bold;
-      }
-
-      a {
-        color: white;
-        text-decoration: none;
-
-        &:hover,
-        &.active {
-          padding-bottom: 22px;
-          border-bottom: 7px solid white;
-
-          &.title {
-            padding-bottom: 18px;
-          }
-        }
-      }
-
-      .icon-button {
-        display: inline-flex;
-        align-items: center;
-        cursor: pointer;
-
-        svg {
-          margin-right: 10px;
-        }
-
-        &:hover {
-          opacity: 0.8;
-        }
-      }
+    &.active, &:hover {
+      color: $blue;
+      border-color: $blue;
     }
   }
 }
