--- a/app/styles/nav.scss
+++ b/app/styles/nav.scss
@@ -1,8 +1,13 @@
+.nav-wrapper {
+  padding: 0 50px;
+  box-shadow: 0 2px 14px 0 rgba(205,205,205,0.50);
+}
+
 .nav {
   display: flex;
-  width: 1000px;
+  max-width: 1000px;
+  min-width: 650px;
   margin: 0 auto;
-  padding: 0 50px;
   align-items: center;
   font-size: 18px;
   justify-content: space-between;
@@ -13,7 +18,7 @@
     border-bottom: 1.5px solid white;
 
     &:first-child {
-      margin-right: 0;
+      margin-left: 0;
     }
 
     &--title {
