--- a/app/styles/nav.scss
+++ b/app/styles/nav.scss
@@ -13,6 +13,7 @@
   justify-content: space-between;
 
   &__item {
+    display: inline-block;
     padding: 22px 0;
     margin-left: 50px;
     border-bottom: 1.5px solid white;
