prepared sub nav

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -25,6 +25,7 @@ $black: #1a1a1a;
 
 @import 'nav';
 @import 'page';
+@import 'sub-nav';
 
 body {
   font-family: 'Ubuntu', 'Helvetica', 'Arial', sans-serif;
