--- a/app/templates/recommendations.hbs
+++ b/app/templates/recommendations.hbs
@@ -1,3 +1,29 @@
+<div class="sub-nav-wrapper">
+  <div class="sub-nav">
+    <linkTo class="sub-nav__item">
+      Foo
+    </linkTo>
+
+    <Icons::NavDivider />
+
+    <linkTo class="sub-nav__item">
+      Bar
+    </linkTo>
+
+    <Icons::NavDivider />
+
+    <linkTo class="sub-nav__item">
+      Baz
+    </linkTo>
+
+    <Icons::NavDivider />
+
+    <linkTo class="sub-nav__item">
+      Quz
+    </linkTo>
+  </div>
+</div>
+
 <div class="page">
   <ul class="sidebar" {{highlight linkSelector="li a" elementSelector="h2"}}>
     {{#each-in this.filteredGroupedRecommendations as |topic|}}
