--- a/app/templates/components/icons/nav-divider.hbs
+++ b/app/templates/components/icons/nav-divider.hbs
@@ -1,3 +1,9 @@
-<svg width="11px" height="19px" viewBox="0 0 11 19" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg
+  width="11px"
+  height="19px"
+  viewBox="0 0 11 19"
+  xmlns="http://www.w3.org/2000/svg"
+  xmlns:xlink="http://www.w3.org/1999/xlink"
+>
   <polyline stroke-width="1.5" points="1.5 1.5 9.5 9.5 1.5 17.5"></polyline>
 </svg>
