--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,76 +1,17 @@
-<div class="page">
-  <div class="hero">
-    <Graphics::Wizard />
+<div class="hero">
+  <h1 class="hero__title">
+    <span>
+      A guide to user-friendly<br />
+      data in publications
+    </span>
+  </h1>
 
-    <h1 class="title0">
-      <span>Welcome to the EU Publication Wizard!</span>
-    </h1>
+  <p class="hero__text">
+    The Data Documents Guide helps you produce and publish documents with data, charts, and text. Answer some simple
+    questions to receive selected recommendations or browse the recommendations catalogue.
+  </p>
 
-    <p>
-      This wizard helps you create more user-friendly, modern publications. Answer some simple questions and receive
-      recommendations for your publication.
-    </p>
-
-    <LinkTo @route="questions" class="button button__primary">
-      Start the Wizard
-    </LinkTo>
-  </div>
-
-  <div class="statement">
-    <h2 class="title1">
-      About the Publication Wizard
-    </h2>
-
-    <p class="large">
-      The Wizard provides you with recommendations on how to create a user-friendly publication in terms of overall
-      design, text, data, and data visualisation. It also helps you with the process of publishing both the publication
-      itself and the data used in the publication.
-    </p>
-
-    <p class="large">
-      These recommendations will make your publication more findable online, more comprehensible to your audiences, and
-      more enjoyable for everyone.
-    </p>
-  </div>
-
-  <div class="statement">
-    <h2 class="title1">
-      Who is the Publication Wizard for and when should it be used?
-    </h2>
-
-    <p class="large">
-      The Wizard is relevant to all people involved in the publication process, such as Researchers, Policy Makers,
-      Communications Specialists, Data Experts, IT-Specialists, Publication Coordinators and Designers.
-    </p>
-
-    <p class="large">
-      The Wizard should be used at the very beginning of your publication process – after you have received the O.K. for
-      the publication, but before you have commissioned any work on it.
-    </p>
-
-    <p class="large">
-      Ideally, all actors are involved from the very beginning in the publication process. That way, each person has the
-      chance to make use of the recommendations that are relevant to their field of responsibility, be it analysing
-      data, writing the text, designing visualisations, or disseminating the publication.
-    </p>
-
-    <p class="large">
-      The publication can be any type of published content. This includes reports, studies and books, assessments,
-      briefs and summaries, press releases, leaflets, brochures, both in print and online.
-    </p>
-  </div>
-
-  <div class="statement">
-    <h2 class="title1">
-      Give us feedback!
-    </h2>
-
-    <p class="large">
-      The EU Publication Wizard was created by the Publications Office of the European Union. What you see here is a
-      beta version of the Wizard. As we are continuing to develop the Wizard, we would love to hear your feedback.
-      Please send us an email at
-      <a href="mailto:OP-DATA-EUROPA-EU@publications.europa.eu">OP-DATA-EUROPA-EU@publications.europa.eu</a>
-      with ‘Publication Wizard feedback’ in the subject line.
-    </p>
-  </div>
+  <LinkTo @route="questions" class="hero__button">
+    Get Recommendations
+  </LinkTo>
 </div>
