--- a/app/styles/nav.scss
+++ b/app/styles/nav.scss
@@ -2,7 +2,7 @@
   position: relative;
   z-index: 1000;
   padding: 0 50px;
-  box-shadow: 0 2px 14px 0 rgba(205,205,205,0.50);
+  box-shadow: 0 2px 14px 0 rgba(205, 205, 205, 0.5);
 }
 
 .nav {
@@ -28,7 +28,8 @@
       font-weight: bold;
     }
 
-    &.active, &:hover {
+    &.active,
+    &:hover {
       color: $blue;
       border-color: $blue;
     }
