--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -16,8 +16,10 @@
 
 $blue: #062fc5;
 $dark-blue: #00326c;
-$dark-grey: #757575;
 $grey: #404040;
+$dark-grey: #757575;
+$other-grey: #e3e3e3;
+$shade: #f9f9f9;
 $light-grey: #c2c2c2;
 $black: #1a1a1a;
 
