--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,11 +4,11 @@
   <nav class="nav">
     <div>
       <LinkTo class="nav__item" @route="questions">
-        Questions
+        Get Recommendations
       </LinkTo>
 
       <LinkTo class="nav__item" @route="catalog">
-        Catalogue
+        Browse Catalogue
       </LinkTo>
     </div>
 
