--- a/app/templates/questions.hbs
+++ b/app/templates/questions.hbs
@@ -16,16 +16,6 @@
 
 {{#if (eq this.page "rec")}}
   <div class="page">
-    <ul class="sidebar" {{highlight linkSelector="li a" elementSelector="h2"}}>
-      {{#each-in this.filteredGroupedRecommendations as |topic|}}
-        <li>
-          <a href="#{{slug topic}}" {{link-inline}}>
-            {{topic}}
-          </a>
-        </li>
-      {{/each-in}}
-    </ul>
-
     <h2 class="title1 title1__capped">
       {{#if this.application.title}}
         Recommendations for your publication "{{this.application.title}}"
@@ -44,104 +34,7 @@
       <span>Share Page</span>
     </div>
 
-    {{#each-in this.filteredGroupedRecommendations as |topic recommendations|}}
-      <div class="section">
-        <h2
-          role="button"
-          class="title2 title2__button"
-          id={{slug topic}}
-          {{on "click" (fn this.openAll recommendations)}}
-        >
-          <span>{{topic}}</span>
-          <span class="title2__small">Open All</span>
-        </h2>
-
-        {{#each recommendations as |recommendation|}}
-          <div class="group">
-            {{#let (get this.state recommendation.id) as |open|}}
-              <h3
-                role="button"
-                class="title3 title3__capped title3__button"
-                {{on "click" (fn this.open recommendation.id (not open))}}
-              >
-                <span>{{recommendation.title}}</span>
-
-                {{#if open}}
-                  <Icons::ChevronUp />
-                {{else}}
-                  <Icons::ChevronDown />
-                {{/if}}
-              </h3>
-
-              {{#if open}}
-                <p>
-                  {{#if recommendation.advanced}}
-                    <strong>Basic</strong>:
-                  {{/if}}
-
-                  {{recommendation.basic}}
-                </p>
-
-                {{#if recommendation.advanced}}
-                  <p>
-                    <strong>Advanced</strong>:
-                    {{recommendation.advanced}}
-                  </p>
-                {{/if}}
-
-                {{#if recommendation.resources}}
-                  <h4 class="title4">
-                    Resources
-                  </h4>
-
-                  {{#each recommendation.resources as |resource|}}
-                    <p>
-                      <a href={{resource.link}} target="_blank" rel="noopener noreferrer">
-                        <Icons::External />
-                        <strong>{{resource.title}}</strong>
-                      </a><br />
-                      {{resource.short}}
-                    </p>
-                  {{/each}}
-                {{/if}}
-
-                {{#if recommendation.contacts}}
-                  <h4 class="title4">
-                    Contacts
-                  </h4>
-
-                  {{#each recommendation.contacts as |contact|}}
-                    <p>
-                      <a href="mailto:{{contact.link}}" rel="noopener noreferrer">
-                        <Icons::External />
-                        <strong>{{contact.title}}</strong>
-                      </a><br />
-                      {{contact.short}}
-                    </p>
-                  {{/each}}
-                {{/if}}
-
-                {{#if recommendation.examples}}
-                  <h4 class="title4">
-                    Examples
-                  </h4>
-
-                  {{#each recommendation.examples as |example|}}
-                    <p>
-                      <a href={{example.link}} target="_blank" rel="noopener noreferrer">
-                        <Icons::External />
-                        <strong>{{example.title}}</strong>
-                      </a><br />
-                      {{example.short}}
-                    </p>
-                  {{/each}}
-                {{/if}}
-              {{/if}}
-            {{/let}}
-          </div>
-        {{/each}}
-      </div>
-    {{/each-in}}
+    <Catalog @topics={{this.filteredTopics}} @recommendations={{this.filteredGroupedRecommendations}} />
   </div>
 {{else}}
   <div class="page">
