--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -26,7 +26,9 @@ $black: #1a1a1a;
 @import 'hero';
 @import 'nav';
 @import 'page';
+@import 'sidebar';
 @import 'sub-nav';
+@import 'title';
 
 body {
   font-family: 'Ubuntu', 'Helvetica', 'Arial', sans-serif;
