--- a/app/templates/components/catalog.hbs
+++ b/app/templates/components/catalog.hbs
@@ -10,10 +10,21 @@
 
 {{#each-in @recommendations as |topic recommendations|}}
   <div class="section">
-    <h2 role="button" class="title2 title2__button" id={{slug topic}} {{on "click" (fn this.openAll recommendations)}}>
-      <span>{{topic}}</span>
-      <span class="title2__small">Open All</span>
-    </h2>
+    <div class="section__head">
+      <h2 class="section__head__title title2" id={{slug topic}}>
+        {{topic}}
+      </h2>
+
+      <div>
+        <button class="section__head__button" type="button" {{on "click" (fn this.openAll recommendations)}}>
+          Open All
+        </button>
+
+        <button class="section__head__button" type="button" {{on "click" (fn this.closeAll recommendations)}}>
+          Close All
+        </button>
+      </div>
+    </div>
 
     {{#each recommendations as |recommendation|}}
       <div class="group">
