--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -27,6 +27,7 @@ $black: #1a1a1a;
 @import 'hero';
 @import 'nav';
 @import 'page';
+@import 'section';
 @import 'sidebar';
 @import 'sub-nav';
 @import 'title';
