--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -12,7 +12,7 @@
       </LinkTo>
     </div>
 
-    <LinkTo class="nav__item nav__item--title" @route="index" class="title">
+    <LinkTo class="nav__item nav__item--title" @route="index">
       Publication Wizard
     </LinkTo>
   </nav>
