further cleaned up css

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -30,6 +30,7 @@ $black: #1a1a1a;
 @import 'section';
 @import 'sidebar';
 @import 'sub-nav';
+@import 'wizard';
 
 body {
   font-family: 'Ubuntu', 'Helvetica', 'Arial', sans-serif;
