--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -6,10 +6,10 @@
     </span>
   </h1>
 
-  <p class="hero__text">
+  <div class="hero__text">
     The Data Documents Guide helps you produce and publish documents with data, charts, and text. Answer some simple
     questions to receive selected recommendations or browse the recommendations catalogue.
-  </p>
+  </div>
 
   <LinkTo @route="questions" class="hero__button">
     Get Recommendations
