--- a/app/templates/components/catalog.hbs
+++ b/app/templates/components/catalog.hbs
@@ -41,20 +41,20 @@
 
           {{#if open}}
             <h4 class="section__group__sub-title">
-              Basic
+              Why
             </h4>
 
             <div class="section__group__text">
-              {{recommendation.basic}}
+              {{recommendation.why}}
             </div>
 
-            {{#if recommendation.advanced}}
+            {{#if recommendation.how}}
               <h4 class="section__group__sub-title">
-                Advanced
+                How
               </h4>
 
               <div class="section__group__text">
-                {{recommendation.advanced}}
+                {{recommendation.how}}
               </div>
             {{/if}}
 
