show topic icon

--- a/app/templates/components/catalog.hbs
+++ b/app/templates/components/catalog.hbs
@@ -12,7 +12,8 @@
   <div class="section">
     <div class="section__head">
       <h2 class="section__head__title" id={{slug topic}}>
-        {{topic}}
+        <img src="icons/{{slug topic}}.svg" alt="Topic Illustration" />
+        <span>{{topic}}</span>
       </h2>
 
       <div>
