--- a/app/styles/section.scss
+++ b/app/styles/section.scss
@@ -5,20 +5,25 @@
     margin-top: 0;
   }
 
-  &__head {
+  &__title {
     display: flex;
-    align-items: baseline;
-    justify-content: space-between;
+    align-items: center;
+    margin-top: 0;
+    font-size: 30px;
+    font-weight: normal;
+    line-height: 40px;
+    color: $black;
 
-    &__title {
-      margin-top: 0;
-      font-size: 30px;
-      font-weight: normal;
-      line-height: 40px;
-      color: $black;
+    img {
+      margin-right: 10px;
     }
+  }
 
-    &__button {
+  &__buttons {
+    margin: 10px 0;
+    text-align: right;
+
+    button {
       font-size: 14px;
       font-weight: bold;
       color: $blue;
