--- a/app/styles/section.scss
+++ b/app/styles/section.scss
@@ -37,7 +37,7 @@
 
   &__group {
     padding: 15px 20px;
-    margin: 0;
+    margin: 10px 0;
     box-shadow: 0 2px 8px 0 rgba(205, 205, 205, 0.5);
     border-radius: 8px;
 
