--- a/app/templates/components/catalog.hbs
+++ b/app/templates/components/catalog.hbs
@@ -11,7 +11,7 @@
 {{#each-in @recommendations as |topic recommendations|}}
   <div class="section">
     <h2 class="section__title" id={{slug topic}}>
-      <img src="icons/{{slug topic}}.svg" alt="Topic Illustration" />
+      <img src="/eu-pubwiz/icons/{{slug topic}}.svg" alt="Topic Illustration" />
       <span>{{topic}}</span>
     </h2>
 
@@ -60,7 +60,7 @@
             {{#if recommendation.gallery.length}}
               <div class="section__group__gallery">
                 <Slideshow @items={{recommendation.gallery}} as |item|>
-                  <img src="images/{{item.image}}.svg" />
+                  <img src="/eu-pubwiz/images/{{item.image}}.svg" />
                   <p>{{item.text}}</p>
                 </Slideshow>
               </div>
