--- a/app/styles/section.scss
+++ b/app/styles/section.scss
@@ -19,6 +19,12 @@
     }
   }
 
+  &__text {
+    font-size: 18px;
+    line-height: 27px;
+    margin: 20px 0;
+  }
+
   &__buttons {
     margin: 10px 0;
     text-align: right;
