--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,11 +1,7 @@
 <div class="nav-wrapper">
   <nav class="nav">
     <div>
-      <LinkTo class="nav__item" @route="questions">
-        Get Recommendations
-      </LinkTo>
-
-      <LinkTo class="nav__item" @route="catalog">
+      <LinkTo class="nav__item" @route="index">
         Browse Catalogue
       </LinkTo>
     </div>
